[project]
name = "livekit-memory"
version = "0.2.5"
description = "Memory - Document ingestion engine. Chunks and indexes knowledge sources into Qdrant to power LiveKit agent's contextual retrieval."
authors = [{ name = "joshiayush" }]
requires-python = ">=3.13,<4"
readme = "README.md"
license = { text = "Apache-2.0" }
keywords = [
    "livekit",
    "rag",
    "memory",
    "qdrant",
    "embeddings",
    "retrieval",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "qdrant-client (>=1.16.1,<2.0.0)",
    "fastembed (>=0.7.4,<0.8.0)",
    "langchain (>=1.1.2,<2.0.0)",
    "langchain-core (>=1.1.1,<2.0.0)",
    "langchain-google-vertexai (>=3.1.1,<4.0.0)",
    "langchain-text-splitters (>=0.3.0,<1.0.0)",
    "nltk (>=3.9.0,<4.0.0)",
    "pypdf (>=5.1.0,<6.0.0)",
    "tidylog (>=0.1.1,<0.2.0)",
    "httpx (>=0.27.0,<1.0.0)",
    "pdfplumber>=0.11.9",
    "isort>=8.0.1",
    "black>=24.0.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "google-generativeai>=0.8.6",
    "dotenv>=0.9.9",
]

[project.urls]
Homepage = "https://github.com/joshiayush/memory"
Repository = "https://github.com/joshiayush/memory"
Issues = "https://github.com/joshiayush/memory/issues"

[project.scripts]
livekit-memory = "memory.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.black]
line-length = 88
target-version = ['py313']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["livekit_memory"]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.hatch.build.targets.sdist]
include = ["src/livekit_memory"]

[tool.hatch.build.targets.wheel]
include = ["src/livekit_memory"]

[tool.hatch.build.targets.wheel.sources]
"src/livekit_memory" = "livekit_memory"

[dependency-groups]
dev = [
    "black (>=25.11.0,<26.0.0)",
    "build (>=1.3.0,<2.0.0)",
    "twine (>=6.2.0,<7.0.0)"
,
]
